--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FuseFace AI - Create Your AI Fusion Videos</title>
+    <meta name="robots" content="all, index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="JsnirJOmu_sFKq9fEnmtWiis0hndSZv7q3BrhgpmG5Q">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
